--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
 <html lang="tr">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kullaniciadi Blogu</title>
+    <title>Atakan AYAZ</title>
 </head>
 <body>
     <h1>Hoşgeldiniz!</h1>
