--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <html lang="tr">
 <head>
-    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atakan AYAZ</title>
+    <title>Siber Güvenlik Blogu</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hoşgeldiniz!</h1>
-    <p>Bu benim ilk GitHub Pages blogum.</p>
-</body>
-</html>
+    <header>
+        <h1>Siber Güvenlik Blogu</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">Hakkında</a></li>
+                <li><a href="#posts">Yazılar</a></li>
+                <li><a href="#contact">İletişim</a></li>
+            </ul>
+        </nav>
+    </header>
+    
+    <main>
+        <section id="about">
+            <h2>Hakkında</h2>
+            <p>Bu blog, siber güvenlik konularında güncel bilgiler ve rehberler sunmak amacıyla oluşturulmuştur. Güvenliğinizi artırmak için ipuçları ve stratejiler bulacaksınız.</p>
+        </section>
+
+        <section id="posts">
+            <h2>Yazılar</h2>
+            <article>
+                <h3>Güvenli Parola Oluşturma</h3>
+                <p>Güvenli bir parola oluşturmanın önemi. Parolanızın güçlü olmasını sağlamak için bazı ipuçları...</p>
+                <a href="#">Devamını Oku</a>
