--- a/index.html
+++ b/index.html
@@ -36,24 +36,28 @@
             Güvenliğinizi artırmak için ipuçları ve stratejiler bulacaksınız.</p>
         </section>
 
-        <section id="posts" class="posts">
-            <h2>Yazılar</h2>
-            <article>
-                <h3>Güvenli Parola Oluşturma</h3>
-                <p>Güvenli bir parola oluşturmanın önemi. Parolanızın güçlü olmasını sağlamak için bazı ipuçları...</p>
-                <a href="#" class="btn">Devamını Oku</a>
-            </article>
-            <article>
-                <h3>Phishing Saldırılarına Karşı Dikkat</h3>
-                <p>Phishing saldırılarından nasıl korunabileceğinizi öğrenin. E-posta güvenliği hakkında bilinmesi gerekenler...</p>
-                <a href="#" class="btn">Devamını Oku</a>
-            </article>
-            <article>
-                <h3>VPN Nedir ve Neden Kullanmalıyım?</h3>
-                <p>VPN kullanmanın avantajları ve nasıl güvenli bir bağlantı sağlayabileceğiniz hakkında bilgiler...</p>
-                <a href="#" class="btn">Devamını Oku</a>
-            </article>
-        </section>
+       <section id="posts" class="posts">
+    <h2>Yazılar</h2>
+    <article>
+    <h3>Güvenli Parola Oluşturma</h3>
+    <p>Güvenli bir parola oluşturmanın önemi. Parolanızın güçlü olmasını sağlamak için bazı ipuçları...</p>
+    <a href="#" class="btn">Devamını Oku</a>
+    <div class="share-buttons">
+        <a href="#" class="btn share">LinkedIn'de Paylaş</a>
+    </div>
+</article>
+    <article>
+        <h3>Phishing Saldırılarına Karşı Dikkat</h3>
+        <p>Phishing saldırılarından nasıl korunabileceğinizi öğrenin. E-posta güvenliği hakkında bilinmesi gerekenler...</p>
+        <a href="#" class="btn">Devamını Oku</a>
+    </article>
+    <article>
+        <h3>VPN Nedir ve Neden Kullanmalıyım?</h3>
+        <p>VPN kullanmanın avantajları ve nasıl güvenli bir bağlantı sağlayabileceğiniz hakkında bilgiler...</p>
+        <a href="#" class="btn">Devamını Oku</a>
+    </article>
+</section>
+
 
         <section id="contact" class="contact">
             <h2>İletişim</h2>
