--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Siber Güvenlik Blogu</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -16,7 +16,6 @@
                     <li><a href="#about">Hakkında</a></li>
                     <li><a href="#posts">Yazılar</a></li>
                     <li><a href="#contact">İletişim</a></li>
-                    <li><a href="resources.html">Kaynaklar</a></li>
                 </ul>
             </nav>
         </div>
@@ -34,42 +33,57 @@
         <section id="about" class="about">
             <h2>Hakkında</h2>
             <p>Bu blog, siber güvenlik konularında güncel bilgiler ve rehberler sunmak amacıyla oluşturulmuştur. 
-            Güvenliğinizi artırmak için ipuçları ve stratejiler bulacaksınız. Ayrıca, siber tehditlerden korunma yöntemlerini ve
-            en iyi uygulamaları öğrenebilirsiniz.</p>
+            Güvenliğinizi artırmak için ipuçları ve stratejiler bulacaksınız.</p>
         </section>
 
         <section id="posts" class="posts">
             <h2>Yazılar</h2>
             <article>
                 <h3>Güvenli Parola Oluşturma</h3>
-                <p>Güvenli bir parola oluşturmanın önemi. Parolanızın güçlü olmasını sağlamak için bazı ipuçları:</p>
+                <p>Güvenli bir parola oluşturmanın önemi büyüktür. Parolanızın güçlü olmasını sağlamak için şu ipuçlarını dikkate alın:</p>
                 <ul>
-                    <li>En az 12 karakter uzunluğunda olmalı.</li>
-                    <li>Büyük harf, küçük harf, rakam ve özel karakter içermeli.</li>
-                    <li>Birden fazla parola kullanın ve bunları kaydedin.</li>
+                    <li>En az 12 karakter kullanın.</li>
+                    <li>Büyük harf, küçük harf, rakam ve sembol kombinasyonu oluşturun.</li>
+                    <li>Tekrar eden veya kolay tahmin edilebilen kelimeler kullanmaktan kaçının.</li>
                 </ul>
-                <a href="secure-passwords.html" class="btn">Devamını Oku</a>
-                <div class="share-buttons">
-                    <a href="#" class="btn share">LinkedIn'de Paylaş</a>
-                </div>
+                <a href="#" class="btn">Devamını Oku</a>
             </article>
             <article>
                 <h3>Phishing Saldırılarına Karşı Dikkat</h3>
-                <p>Phishing saldırılarından nasıl korunabileceğinizi öğrenin. E-posta güvenliği hakkında bilinmesi gerekenler:</p>
+                <p>Phishing saldırıları, kişisel bilgilerinizi çalmak için kullanılan yaygın bir yöntemdir. Aşağıdaki ipuçları ile korunabilirsiniz:</p>
                 <ul>
-                    <li>Gelen e-postaları dikkatlice inceleyin.</li>
-                    <li>Şüpheli bağlantılara tıklamayın.</li>
-                    <li>Güvenilir kaynaklardan gelen bilgileri kontrol edin.</li>
+                    <li>Tanımadığınız e-postalardaki bağlantılara tıklamayın.</li>
+                    <li>Resmi web sitelerinin URL'lerini kontrol edin.</li>
+                    <li>Şüpheli e-postaları rapor edin.</li>
                 </ul>
-                <a href="phishing.html" class="btn">Devamını Oku</a>
+                <a href="#" class="btn">Devamını Oku</a>
             </article>
             <article>
                 <h3>VPN Nedir ve Neden Kullanmalıyım?</h3>
-                <p>VPN kullanmanın avantajları ve nasıl güvenli bir bağlantı sağlayabileceğiniz hakkında bilgiler:</p>
+                <p>VPN (Sanal Özel Ağ), internet trafiğinizi güvence altına almak için kullanılır. Özellikleri arasında:</p>
                 <ul>
-                    <li>Veri güvenliğinizi artırır.</li>
-                    <li>Coğrafi kısıtlamaları aşmanıza yardımcı olur.</li>
-                    <li>Anonim web taraması sağlar.</li>
+                    <li>Gizliliğinizi koruma.</li>
+                    <li>Coğrafi kısıtlamaları aşma.</li>
+                    <li>Güvenli bağlantı sağlama.</li>
                 </ul>
-                <a href="vpn.html" class="btn">Devamını Oku</a>
+                <a href="#" class="btn">Devamını Oku</a>
             </article>
+        </section>
+
+        <section id="contact" class="contact">
+            <h2>İletişim</h2>
+            <p>Herhangi bir sorunuz veya öneriniz varsa lütfen bizimle iletişime geçin.</p>
+            <form>
+                <input type="text" placeholder="Adınız" required>
+                <input type="email" placeholder="E-posta Adresiniz" required>
+                <textarea placeholder="Mesajınız" required></textarea>
+                <button type="submit" class="btn">Gönder</button>
+            </form>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Siber Güvenlik Blogu. Tüm hakları saklıdır.</p>
+    </footer>
+</body>
+</html>
