--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Siber Güvenlik Blogu</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
             <nav>
                 <ul>
                     <li><a href="#about">Hakkında</a></li>
-                    <li><a href="#posts">Yazılar</a></li>
+                    <li><a href="#cve">Güncel CVE'ler</a></li>
                     <li><a href="#contact">İletişim</a></li>
                 </ul>
             </nav>
@@ -25,7 +25,7 @@
         <div class="container">
             <h2>Güvenliğinizi Artırın</h2>
             <p>Siber güvenlik hakkında en güncel bilgiler ve ipuçları için doğru yerdesiniz.</p>
-            <a href="#posts" class="btn">Yazılara Göz At</a>
+            <a href="#cve" class="btn">Güncel CVE'lere Göz At</a>
         </div>
     </section>
 
@@ -36,37 +36,19 @@
             Güvenliğinizi artırmak için ipuçları ve stratejiler bulacaksınız.</p>
         </section>
 
-        <section id="posts" class="posts">
-            <h2>Yazılar</h2>
+        <section id="cve" class="cve">
+            <h2>Güncel CVE Açıkları</h2>
             <article>
-                <h3>Güvenli Parola Oluşturma</h3>
-                <p>Güvenli bir parola oluşturmanın önemi büyüktür. Parolanızın güçlü olmasını sağlamak için şu ipuçlarını dikkate alın:</p>
-                <ul>
-                    <li>En az 12 karakter kullanın.</li>
-                    <li>Büyük harf, küçük harf, rakam ve sembol kombinasyonu oluşturun.</li>
-                    <li>Tekrar eden veya kolay tahmin edilebilen kelimeler kullanmaktan kaçının.</li>
-                </ul>
-                <a href="#" class="btn">Devamını Oku</a>
+                <h3><a href="cve1.html">CVE-2023-12345: Örnek Açık</a></h3>
+                <p>Bu CVE, XYZ yazılımında bir güvenlik açığıdır. Açık, kötü niyetli kullanıcıların sisteme erişmesine olanak tanımaktadır.</p>
             </article>
             <article>
-                <h3>Phishing Saldırılarına Karşı Dikkat</h3>
-                <p>Phishing saldırıları, kişisel bilgilerinizi çalmak için kullanılan yaygın bir yöntemdir. Aşağıdaki ipuçları ile korunabilirsiniz:</p>
-                <ul>
-                    <li>Tanımadığınız e-postalardaki bağlantılara tıklamayın.</li>
-                    <li>Resmi web sitelerinin URL'lerini kontrol edin.</li>
-                    <li>Şüpheli e-postaları rapor edin.</li>
-                </ul>
-                <a href="#" class="btn">Devamını Oku</a>
+                <h3><a href="cve2.html">CVE-2023-67890: Örnek Açık</a></h3>
+                <p>Bu CVE, ABC sisteminde bir zafiyet olup, verilere yetkisiz erişim sağlama riski taşımaktadır.</p>
             </article>
             <article>
-                <h3>VPN Nedir ve Neden Kullanmalıyım?</h3>
-                <p>VPN (Sanal Özel Ağ), internet trafiğinizi güvence altına almak için kullanılır. Özellikleri arasında:</p>
-                <ul>
-                    <li>Gizliliğinizi koruma.</li>
-                    <li>Coğrafi kısıtlamaları aşma.</li>
-                    <li>Güvenli bağlantı sağlama.</li>
-                </ul>
-                <a href="#" class="btn">Devamını Oku</a>
+                <h3><a href="cve3.html">CVE-2023-54321: Örnek Açık</a></h3>
+                <p>Bu CVE, DEF uygulamasında bir sorun olup, uzaktan kod çalıştırma riskini artırmaktadır.</p>
             </article>
         </section>
 
@@ -83,8 +65,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Siber Güvenlik Blogu. Tüm hakları saklıdır.</p>
+        <p>&copy; 2024 Siber Güvenlik Atakan AYAZ'ın Blogu. Tüm hakları saklıdır.</p>
     </footer>
 </body>
 </html>
-
