--- a/index.html
+++ b/index.html
@@ -1,91 +1,33 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Siber Güvenlik Blogu</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Siber Güvenlik Blogu</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">Hakkında</a></li>
+                <li><a href="cve1.html">CVE-2023-38630</a></li>
+                <li><a href="cve2.html">CVE-2023-40539</a></li>
+                <li><a href="#contact">İletişim</a></li>
+            </ul>
+        </nav>
+    </header>
+    
+    <main>
+        <section id="about">
+            <h2>Hakkında</h2>
+            <p>Bu blog, siber güvenlik alanında güncel bilgiler ve CVE açıklamaları sunmaktadır.</p>
+        </section>
+    </main>
 
-body {
-    font-family: 'Roboto', sans-serif;
-    background-color: #f8f9fa; /* Açık gri arka plan */
-    color: #343a40; /* Koyu yazı rengi */
-    line-height: 1.6;
-}
-
-header {
-    background: #007bff; /* Mavi üst bar */
-    color: white;
-    padding: 20px 0;
-    text-align: center;
-}
-
-nav ul {
-    list-style: none;
-    padding: 0;
-}
-
-nav ul li {
-    display: inline;
-    margin: 0 20px;
-}
-
-nav a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.hero {
-    background: url('https://example.com/your-image.jpg') no-repeat center center/cover; /* Arka plan resmi */
-    color: white;
-    text-align: center;
-    padding: 100px 20px;
-}
-
-.hero h2 {
-    font-size: 2.5em;
-}
-
-.hero p {
-    font-size: 1.2em;
-}
-
-.btn {
-    background: #28a745; /* Yeşil buton */
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    text-decoration: none;
-}
-
-.container {
-    width: 90%;
-    margin: auto;
-    max-width: 1200px;
-}
-
-main {
-    padding: 20px;
-}
-
-section {
-    margin-bottom: 40px;
-}
-
-h2 {
-    color: #007bff; /* Mavi alt başlık */
-}
-
-h3 {
-    margin-bottom: 10px;
-}
-
-footer {
-    text-align: center;
-    padding: 20px 0;
-    background: #343a40; /* Koyu gri alt bar */
-    color: white;
-    position: relative;
-    bottom: 0;
-    width: 100%;
-}
+    <footer>
+        <p>&copy; 2024 Siber Güvenlik Blogu. Tüm hakları saklıdır.</p>
+    </footer>
+</body>
+</html>
