--- a/index.html
+++ b/index.html
@@ -5,24 +5,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Siber Güvenlik Blogu</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Siber Güvenlik Blogu</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">Hakkında</a></li>
-                <li><a href="cve1.html">CVE-2023-38630</a></li>
-                <li><a href="cve2.html">CVE-2023-40539</a></li>
-                <li><a href="#contact">İletişim</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <h1>Siber Güvenlik Blogu</h1>
+            <nav>
+                <ul>
+                    <li><a href="#about">Hakkında</a></li>
+                    <li><a href="#posts">Yazılar</a></li>
+                    <li><a href="#contact">İletişim</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     
-    <main>
-        <section id="about">
+    <section class="hero">
+        <div class="hero-content">
+            <h2>Güvenliğinizi Artırın</h2>
+            <p>Siber güvenlik hakkında en güncel bilgiler ve ipuçları için doğru yerdesiniz.</p>
+            <a href="#posts" class="btn">Yazılara Göz At</a>
+        </div>
+    </section>
+
+    <main class="container">
+        <section id="about" class="about">
             <h2>Hakkında</h2>
-            <p>Bu blog, siber güvenlik alanında güncel bilgiler ve CVE açıklamaları sunmaktadır.</p>
+            <p>Bu blog, siber güvenlik konularında güncel bilgiler ve rehberler sunmak amacıyla oluşturulmuştur. 
+            Güvenliğinizi artırmak için ipuçları ve stratejiler bulacaksınız.</p>
+        </section>
+
+        <section id="posts" class="posts">
+            <h2>Yazılar</h2>
+            <article>
+                <h3>Güvenli Parola Oluşturma</h3>
+                <p>Güvenli bir parola oluşturmanın önemi. Parolanızın güçlü olmasını sağlamak için bazı ipuçları...</p>
+                <a href="#" class="btn">Devamını Oku</a>
+            </article>
+            <article>
+                <h3>Phishing Saldırılarına Karşı Dikkat</h3>
+                <p>Phishing saldırılarından nasıl korunabileceğinizi öğrenin. E-posta güvenliği hakkında bilinmesi gerekenler...</p>
+                <a href="#" class="btn">Devamını Oku</a>
+            </article>
+            <article>
+                <h3>VPN Nedir ve Neden Kullanmalıyım?</h3>
+                <p>VPN kullanmanın avantajları ve nasıl güvenli bir bağlantı sağlayabileceğiniz hakkında bilgiler...</p>
+                <a href="#" class="btn">Devamını Oku</a>
+            </article>
+        </section>
+
+        <section id="contact" class="contact">
+            <h2>İletişim</h2>
+            <p>Herhangi bir sorunuz veya öneriniz varsa lütfen bizimle iletişime geçin.</p>
+            <form>
+                <input type="text" placeholder="Adınız" required>
+                <input type="email" placeholder="E-posta Adresiniz" required>
+                <textarea placeholder="Mesajınız" required></textarea>
+                <button type="submit" class="btn">Gönder</button>
+            </form>
         </section>
     </main>
 
