--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Siber Güvenlik Blogu</title>
+    <title>Siber Güvenlik Blogu - Atakan AYAZ</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -15,6 +15,7 @@
                 <ul>
                     <li><a href="#about">Hakkında</a></li>
                     <li><a href="#posts">Yazılar</a></li>
+                    <li><a href="#cve">CVE Açıkları</a></li>
                     <li><a href="#contact">İletişim</a></li>
                 </ul>
             </nav>
@@ -22,7 +23,7 @@
     </header>
     
     <section class="hero">
-        <div class="hero-content">
+        <div class="container">
             <h2>Güvenliğinizi Artırın</h2>
             <p>Siber güvenlik hakkında en güncel bilgiler ve ipuçları için doğru yerdesiniz.</p>
             <a href="#posts" class="btn">Yazılara Göz At</a>
@@ -32,8 +33,7 @@
     <main class="container">
         <section id="about" class="about">
             <h2>Hakkında</h2>
-            <p>Bu blog, siber güvenlik konularında güncel bilgiler ve rehberler sunmak amacıyla oluşturulmuştur. 
-            Güvenliğinizi artırmak için ipuçları ve stratejiler bulacaksınız.</p>
+            <p>Bu blog, siber güvenlik konularında güncel bilgiler ve rehberler sunmak amacıyla oluşturulmuştur. Güvenliğinizi artırmak için ipuçları ve stratejiler bulacaksınız.</p>
         </section>
 
         <section id="posts" class="posts">
@@ -41,18 +41,28 @@
             <article>
                 <h3>Güvenli Parola Oluşturma</h3>
                 <p>Güvenli bir parola oluşturmanın önemi. Parolanızın güçlü olmasını sağlamak için bazı ipuçları...</p>
-                <a href="#" class="btn">Devamını Oku</a>
+                <a href="post1.html" class="btn">Devamını Oku</a>
             </article>
             <article>
                 <h3>Phishing Saldırılarına Karşı Dikkat</h3>
                 <p>Phishing saldırılarından nasıl korunabileceğinizi öğrenin. E-posta güvenliği hakkında bilinmesi gerekenler...</p>
-                <a href="#" class="btn">Devamını Oku</a>
+                <a href="post2.html" class="btn">Devamını Oku</a>
             </article>
             <article>
                 <h3>VPN Nedir ve Neden Kullanmalıyım?</h3>
                 <p>VPN kullanmanın avantajları ve nasıl güvenli bir bağlantı sağlayabileceğiniz hakkında bilgiler...</p>
-                <a href="#" class="btn">Devamını Oku</a>
+                <a href="post3.html" class="btn">Devamını Oku</a>
             </article>
+        </section>
+
+        <section id="cve" class="cve">
+            <h2>CVE Açıkları</h2>
+            <p>Güncel CVE açıkları ve çözümleri hakkında bilgi almak için aşağıdaki bağlantılara göz atın:</p>
+            <ul>
+                <li><a href="cve1.html">CVE-2023-XXXX - Açıklama ve Çözüm</a></li>
+                <li><a href="cve2.html">CVE-2023-YYYY - Açıklama ve Çözüm</a></li>
+                <li><a href="cve3.html">CVE-2023-ZZZZ - Açıklama ve Çözüm</a></li>
+            </ul>
         </section>
 
         <section id="contact" class="contact">
