--- a/index.html
+++ b/index.html
@@ -3,81 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Siber Güvenlik Blogu</title>
+    <title>Atakan Ayaz - Siber Güvenlik Blogu</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="main-header">
         <div class="container">
-            <h1>Siber Güvenlik Blogu</h1>
+            <h1>Atakan Ayaz | Siber Güvenlik Blogu</h1>
             <nav>
                 <ul>
-                    <li><a href="#about">Hakkında</a></li>
-                    <li><a href="#posts">Yazılar</a></li>
-                    <li><a href="#cve">Güncel CVE Açıkları</a></li>
+                    <li><a href="#home">Ana Sayfa</a></li>
+                    <li><a href="#cve">CVE Açıkları</a></li>
+                    <li><a href="#articles">Yazılar</a></li>
                     <li><a href="#contact">İletişim</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    
-    <section class="hero">
+
+    <section class="hero-section">
         <div class="container">
             <h2>Güvenliğinizi Artırın</h2>
-            <p>Siber güvenlik hakkında en güncel bilgiler ve ipuçları için doğru yerdesiniz.</p>
-            <a href="#posts" class="btn">Yazılara Göz At</a>
+            <p>Siber tehditlerle mücadele etmek için en güncel bilgiler ve eğitimler burada!</p>
+            <a href="#cve" class="btn hero-btn">Son CVE Açıkları</a>
         </div>
     </section>
 
-    <main class="container">
-        <section id="about" class="about">
-            <h2>Hakkında</h2>
-            <p>Bu blog, siber güvenlik konularında güncel bilgiler ve rehberler sunmak amacıyla oluşturulmuştur. Güvenliğinizi artırmak için ipuçları ve stratejiler bulacaksınız.</p>
+    <main>
+        <section id="featured" class="featured-section">
+            <div class="container">
+                <h2>Öne Çıkan Konular</h2>
+                <div class="card-container">
+                    <div class="card">
+                        <h3>Phishing Saldırıları</h3>
+                        <p>Kimlik avı saldırılarından korunmanın yollarını öğrenin.</p>
+                        <a href="#" class="btn">Devamını Oku</a>
+                    </div>
+                    <div class="card">
+                        <h3>VPN Kullanımı</h3>
+                        <p>VPN neden gerekli ve nasıl kurulur? Bilmeniz gerekenler.</p>
+                        <a href="#" class="btn">Devamını Oku</a>
+                    </div>
+                    <div class="card">
+                        <h3>Sosyal Mühendislik Saldırıları</h3>
+                        <p>Sosyal mühendislik saldırılarına karşı nasıl önlem alınır?</p>
+                        <a href="#" class="btn">Devamını Oku</a>
+                    </div>
+                </div>
+            </div>
         </section>
 
-        <section id="posts" class="posts">
-            <h2>Yazılar</h2>
-            <article>
-                <h3>Güvenli Parola Oluşturma</h3>
-                <p>Güvenli bir parola oluşturmanın önemi. Parolanızın güçlü olmasını sağlamak için bazı ipuçları...</p>
-                <a href="#" class="btn">Devamını Oku</a>
-            </article>
-            <article>
-                <h3>Phishing Saldırılarına Karşı Dikkat</h3>
-                <p>Phishing saldırılarından nasıl korunabileceğinizi öğrenin. E-posta güvenliği hakkında bilinmesi gerekenler...</p>
-                <a href="#" class="btn">Devamını Oku</a>
-            </article>
-            <article>
-                <h3>VPN Nedir ve Neden Kullanmalıyım?</h3>
-                <p>VPN kullanmanın avantajları ve nasıl güvenli bir bağlantı sağlayabileceğiniz hakkında bilgiler...</p>
-                <a href="#" class="btn">Devamını Oku</a>
-            </article>
+        <section id="cve" class="cve-section">
+            <div class="container">
+                <h2>Güncel CVE Açıkları</h2>
+                <ul>
+                    <li><strong>CVE-2024-12345:</strong> Apache Log4j güvenlik açığı – Uzaktan kod yürütme tehdidi. <a href="#">Detaylar ve Çözüm</a></li>
+                    <li><strong>CVE-2024-54321:</strong> Windows SMB servisinde kritik açık – Ağ geçişine izin verir. <a href="#">Detaylar ve Çözüm</a></li>
+                    <li><strong>CVE-2024-09876:</strong> OpenSSL sürüm güncellemesi – Şifreleme hataları. <a href="#">Detaylar ve Çözüm</a></li>
+                </ul>
+            </div>
         </section>
 
-        <section id="cve" class="cve">
-            <h2>Güncel CVE Açıkları</h2>
-            <ul>
-                <li><a href="cve1.html">CVE-2023-12345: Açıklama ve Çözüm</a></li>
-                <li><a href="cve2.html">CVE-2023-12346: Açıklama ve Çözüm</a></li>
-                <li><a href="cve3.html">CVE-2023-12347: Açıklama ve Çözüm</a></li>
-            </ul>
-        </section>
-
-        <section id="contact" class="contact">
-            <h2>İletişim</h2>
-            <p>Herhangi bir sorunuz veya öneriniz varsa lütfen bizimle iletişime geçin.</p>
-            <form>
-                <input type="text" placeholder="Adınız" required>
-                <input type="email" placeholder="E-posta Adresiniz" required>
-                <textarea placeholder="Mesajınız" required></textarea>
-                <button type="submit" class="btn">Gönder</button>
-            </form>
+        <section id="articles" class="articles-section">
+            <div class="container">
+                <h2>Son Blog Yazıları</h2>
+                <article>
+                    <h3>Güçlü Parola Oluşturma</h3>
+                    <p>Güçlü bir parola oluşturmanın püf noktalarını öğrenin ve hesabınızı güvenceye alın.</p>
+                    <a href="#" class="btn">Devamını Oku</a>
+                </article>
+                <article>
+                    <h3>Zero-Day Açıkları Nedir?</h3>
+                    <p>Zero-day açıkları nasıl tespit edilir ve nasıl korunulur?</p>
+                    <a href="#" class="btn">Devamını Oku</a>
+                </article>
+            </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Siber Güvenlik Blogu. Tüm hakları saklıdır.</p>
+        <div class="container">
+            <p>&copy; 2024 Atakan Ayaz - Tüm Hakları Saklıdır.</p>
+            <nav class="footer-nav">
+                <a href="#">Gizlilik Politikası</a> | 
+                <a href="#">Kullanım Koşulları</a>
+            </nav>
+        </div>
     </footer>
 </body>
 </html>
