--- a/index.html
+++ b/index.html
@@ -56,27 +56,37 @@
 
         <section class="content-section">
             <div class="container content-grid">
-                <div class="cve-list">
+                <div class="card-container">
                     <h2>Güncel CVE Açıkları</h2>
-                    <ul>
-                        <li><strong>CVE-2024-12345:</strong> Apache Log4j güvenlik açığı – Uzaktan kod yürütme tehdidi. <a href="#">Detaylar ve Çözüm</a></li>
-                        <li><strong>CVE-2024-54321:</strong> Windows SMB servisinde kritik açık – Ağ geçişine izin verir. <a href="#">Detaylar ve Çözüm</a></li>
-                        <li><strong>CVE-2024-09876:</strong> OpenSSL sürüm güncellemesi – Şifreleme hataları. <a href="#">Detaylar ve Çözüm</a></li>
-                    </ul>
+                    <div class="card">
+                        <h3>CVE-2024-12345</h3>
+                        <p>Apache Log4j güvenlik açığı – Uzaktan kod yürütme tehdidi.</p>
+                        <a href="#">Detaylar ve Çözüm</a>
+                    </div>
+                    <div class="card">
+                        <h3>CVE-2024-54321</h3>
+                        <p>Windows SMB servisinde kritik açık – Ağ geçişine izin verir.</p>
+                        <a href="#">Detaylar ve Çözüm</a>
+                    </div>
+                    <div class="card">
+                        <h3>CVE-2024-09876</h3>
+                        <p>OpenSSL şifreleme hatası – Sürüm güncellemesi gerektirir.</p>
+                        <a href="#">Detaylar ve Çözüm</a>
+                    </div>
                 </div>
 
-                <div class="blog-posts">
+                <div class="card-container">
                     <h2>Son Blog Yazıları</h2>
-                    <article>
+                    <div class="card">
                         <h3>Güçlü Parola Oluşturma</h3>
-                        <p>Güçlü bir parola oluşturmanın püf noktalarını öğrenin ve hesabınızı güvenceye alın.</p>
+                        <p>Güçlü bir parola oluşturmanın püf noktalarını öğrenin.</p>
                         <a href="#" class="btn">Devamını Oku</a>
-                    </article>
-                    <article>
+                    </div>
+                    <div class="card">
                         <h3>Zero-Day Açıkları Nedir?</h3>
                         <p>Zero-day açıkları nasıl tespit edilir ve nasıl korunulur?</p>
                         <a href="#" class="btn">Devamını Oku</a>
-                    </article>
+                    </div>
                 </div>
             </div>
         </section>
