--- a/index.html
+++ b/index.html
@@ -3,78 +3,191 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atakan Ayaz - Siber Güvenlik Blogu</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Raleway:wght@600&display=swap" rel="stylesheet">
+    <title>Atakan Ayaz | Siber Güvenlik Blogu</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <style>
+        body {
+            background-color: #1c1c1c;
+            color: #fff;
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        .main-header {
+            background-color: #2a2a2a;
+            padding: 20px;
+            text-align: center;
+        }
+
+        .main-header h1 {
+            font-size: 2.5rem;
+            margin: 0;
+        }
+
+        .main-header nav ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        .main-header nav ul li {
+            display: inline-block;
+            margin: 0 15px;
+        }
+
+        .main-header a {
+            text-decoration: none;
+            color: #4d8db0;
+            font-size: 1.2rem;
+        }
+
+        .hero-section {
+            padding: 50px 0;
+            text-align: center;
+            background-color: #333;
+        }
+
+        .hero-section h2 {
+            font-size: 2rem;
+            margin-bottom: 10px;
+        }
+
+        .hero-section p {
+            font-size: 1.2rem;
+        }
+
+        .btn {
+            display: inline-block;
+            padding: 10px 20px;
+            margin-top: 15px;
+            background-color: #4d8db0;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+
+        .featured-section, .cve-section, .articles-section {
+            margin: 20px 0;
+            padding: 20px;
+            background-color: #1b1b1b;
+            border-radius: 8px;
+        }
+
+        .featured-title, h2 {
+            text-align: center;
+            font-size: 1.8rem;
+            margin-bottom: 15px;
+        }
+
+        .card-container {
+            display: flex;
+            justify-content: space-around;
+            gap: 15px;
+        }
+
+        .card {
+            background-color: #2a2a2a;
+            padding: 20px;
+            border-radius: 8px;
+            width: 30%;
+        }
+
+        .card h3 {
+            margin-top: 0;
+        }
+
+        .card p {
+            margin-bottom: 10px;
+        }
+
+        .cve-list, .blog-list {
+            list-style: none;
+            padding: 0;
+            font-size: 1.1rem;
+            line-height: 1.6;
+        }
+
+        .cve-list li, .blog-list li {
+            margin-bottom: 10px;
+        }
+
+        .cve-list a, .blog-list a {
+            color: #79a9c9;
+            text-decoration: underline;
+        }
+
+        .footer {
+            text-align: center;
+            padding: 15px 0;
+            background-color: #2a2a2a;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-    <header class="main-header">
-        <div class="container">
-            <h1>Atakan Ayaz | Siber Güvenlik Blogu</h1>
-            <nav>
-                <ul>
-                    <li><a href="#home">Ana Sayfa</a></li>
-                    <li><a href="#cve">Öne Çıkan CVE Açıkları</a></li>
-                    <li><a href="#articles">Son Blog Yazıları</a></li>
-                    <li><a href="#contact">İletişim</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
 
-    <main>
-        <section id="cve" class="content-section">
-            <div class="container">
-                <h2>Öne Çıkan CVE Açıkları</h2>
-                <div class="cve-list">
-                    <div class="cve-item">
-                        <h3>CVE-2024-12345</h3>
-                        <p>Apache Log4j – Kritik uzaktan kod yürütme açığı.</p>
-                        <a href="#" class="btn">Detaylar ve Çözüm</a>
-                    </div>
-                    <div class="cve-item">
-                        <h3>CVE-2024-54321</h3>
-                        <p>Windows SMB protokolünde açık – Ağ erişimi riski.</p>
-                        <a href="#" class="btn">Detaylar ve Çözüm</a>
-                    </div>
-                    <div class="cve-item">
-                        <h3>CVE-2024-09876</h3>
-                        <p>OpenSSL hatası – Şifreleme zafiyeti giderildi.</p>
-                        <a href="#" class="btn">Detaylar ve Çözüm</a>
-                    </div>
-                </div>
+<header class="main-header">
+    <h1>Atakan Ayaz | Siber Güvenlik Blogu</h1>
+    <nav>
+        <ul>
+            <li><a href="#home">Ana Sayfa</a></li>
+            <li><a href="#cve">CVE Açıkları</a></li>
+            <li><a href="#articles">Yazılar</a></li>
+            <li><a href="#contact">İletişim</a></li>
+        </ul>
+    </nav>
+</header>
+
+<section class="hero-section">
+    <h2>Güvenliğinizi Artırın</h2>
+    <p>Siber tehditlerle mücadele etmek için en güncel bilgiler ve eğitimler burada!</p>
+    <a href="#cve" class="btn hero-btn">Son CVE Açıkları</a>
+</section>
+
+<main>
+    <section id="featured" class="featured-section">
+        <h2 class="featured-title">Öne Çıkan Konular</h2>
+        <div class="card-container">
+            <div class="card">
+                <h3>Phishing Saldırıları</h3>
+                <p>Kimlik avı saldırılarından korunmanın yollarını öğrenin.</p>
+                <a href="#" class="btn">Devamını Oku</a>
             </div>
-        </section>
-
-        <section id="articles" class="content-section">
-            <div class="container">
-                <h2>Son Blog Yazıları</h2>
-                <div class="blog-list">
-                    <div class="blog-item">
-                        <h3>Güçlü Parola Nasıl Oluşturulur?</h3>
-                        <p>Parola güvenliği için ipuçları.</p>
-                        <a href="#" class="btn">Devamını Oku</a>
-                    </div>
-                    <div class="blog-item">
-                        <h3>Zero-Day Açıkları Nedir?</h3>
-                        <p>Bu açıklardan korunma yolları.</p>
-                        <a href="#" class="btn">Devamını Oku</a>
-                    </div>
-                </div>
+            <div class="card">
+                <h3>VPN Kullanımı</h3>
+                <p>VPN neden gerekli ve nasıl kurulur? Bilmeniz gerekenler.</p>
+                <a href="#" class="btn">Devamını Oku</a>
             </div>
-        </section>
-    </main>
-
-    <footer class="custom-footer">
-        <div class="container">
-            <p>&copy; 2024 Atakan Ayaz - Tüm Hakları Saklıdır.</p>
-            <nav>
-                <a href="#">Gizlilik Politikası</a> | 
-                <a href="#">Kullanım Koşulları</a>
-            </nav>
+            <div class="card">
+                <h3>Sosyal Mühendislik Saldırıları</h3>
+                <p>Sosyal mühendislik saldırılarına karşı nasıl önlem alınır?</p>
+                <a href="#" class="btn">Devamını Oku</a>
+            </div>
         </div>
-    </footer>
+    </section>
+
+    <section id="cve" class="cve-section">
+        <h2>Öne Çıkan CVE Açıkları</h2>
+        <ul class="cve-list">
+            <li><strong>CVE-2024-4567:</strong> Kritik bir güvenlik açığı. <a href="#">Detaylar</a></li>
+            <li><strong>CVE-2024-6789:</strong> Yetkisiz erişim sorunu. <a href="#">Detaylar</a></li>
+            <li><strong>CVE-2024-7890:</strong> DDOS saldırısına açık yapı. <a href="#">Detaylar</a></li>
+        </ul>
+    </section>
+
+    <section id="articles" class="articles-section">
+        <h2>Son Blog Yazıları</h2>
+        <ul class="blog-list">
+            <li><a href="#">Siber Tehditlere Karşı 5 Yeni Yöntem</a></li>
+            <li><a href="#">2024'ün En Popüler VPN Hizmetleri</a></li>
+            <li><a href="#">Phishing Saldırılarında Yeni Taktikler</a></li>
+        </ul>
+    </section>
+</main>
+
+<footer class="footer">
+    <p>&copy; 2024 Atakan Ayaz | Tüm Hakları Saklıdır</p>
+</footer>
+
 </body>
 </html>
-
-
