--- a/index.html
+++ b/index.html
@@ -50,24 +50,35 @@
     </section>
 
     <section id="cve" class="cve-section">
-        <h2 class="cve-title">Öne Çıkan CVE Açıkları</h2>
-        <div class="cve-box">
-            <ul class="cve-list">
-                <li><strong>CVE-2024-4567:</strong> Kritik bir güvenlik açığı. <a href="#">Detaylar</a></li>
-                <li><strong>CVE-2024-6789:</strong> Yetkisiz erişim sorunu. <a href="#">Detaylar</a></li>
-                <li><strong>CVE-2024-7890:</strong> DDOS saldırısına açık yapı. <a href="#">Detaylar</a></li>
-            </ul>
+        <h2>Öne Çıkan CVE Açıkları</h2>
+        <div class="cve-container">
+            <div class="cve-card">
+                <strong>CVE-2024-4567:</strong> Kritik bir güvenlik açığı.
+                <a href="#">Detaylar</a>
+            </div>
+            <div class="cve-card">
+                <strong>CVE-2024-6789:</strong> Yetkisiz erişim sorunu.
+                <a href="#">Detaylar</a>
+            </div>
+            <div class="cve-card">
+                <strong>CVE-2024-7890:</strong> DDOS saldırısına açık yapı.
+                <a href="#">Detaylar</a>
+            </div>
         </div>
     </section>
 
     <section id="articles" class="articles-section">
         <h2>Son Blog Yazıları</h2>
-        <div class="articles-box">
-            <ul class="blog-list">
-                <li><a href="#">Siber Tehditlere Karşı 5 Yeni Yöntem</a></li>
-                <li><a href="#">2024'ün En Popüler VPN Hizmetleri</a></li>
-                <li><a href="#">Phishing Saldırılarında Yeni Taktikler</a></li>
-            </ul>
+        <div class="blog-container">
+            <div class="blog-card">
+                <a href="#">Siber Tehditlere Karşı 5 Yeni Yöntem</a>
+            </div>
+            <div class="blog-card">
+                <a href="#">2024'ün En Popüler VPN Hizmetleri</a>
+            </div>
+            <div class="blog-card">
+                <a href="#">Phishing Saldırılarında Yeni Taktikler</a>
+            </div>
         </div>
     </section>
 </main>
