--- a/index.html
+++ b/index.html
@@ -49,38 +49,40 @@
         </div>
     </section>
 
-    <section id="cve" class="cve-section">
-        <h2>Öne Çıkan CVE Açıkları</h2>
-        <div class="cve-container">
-            <div class="cve-card">
-                <strong>CVE-2024-4567:</strong> Kritik bir güvenlik açığı.
-                <a href="#">Detaylar</a>
+    <div class="two-column-layout">
+        <section id="cve" class="cve-section">
+            <h2 class="cve-title">Öne Çıkan CVE Açıkları</h2>
+            <div class="cve-container">
+                <div class="cve-card">
+                    <strong>CVE-2024-4567:</strong> Kritik bir güvenlik açığı.
+                    <a href="#">Detaylar</a>
+                </div>
+                <div class="cve-card">
+                    <strong>CVE-2024-6789:</strong> Yetkisiz erişim sorunu.
+                    <a href="#">Detaylar</a>
+                </div>
+                <div class="cve-card">
+                    <strong>CVE-2024-7890:</strong> DDOS saldırısına açık yapı.
+                    <a href="#">Detaylar</a>
+                </div>
             </div>
-            <div class="cve-card">
-                <strong>CVE-2024-6789:</strong> Yetkisiz erişim sorunu.
-                <a href="#">Detaylar</a>
-            </div>
-            <div class="cve-card">
-                <strong>CVE-2024-7890:</strong> DDOS saldırısına açık yapı.
-                <a href="#">Detaylar</a>
-            </div>
-        </div>
-    </section>
+        </section>
 
-    <section id="articles" class="articles-section">
-        <h2>Son Blog Yazıları</h2>
-        <div class="blog-container">
-            <div class="blog-card">
-                <a href="#">Siber Tehditlere Karşı 5 Yeni Yöntem</a>
+        <section id="articles" class="articles-section">
+            <h2 class="articles-title">Son Blog Yazıları</h2>
+            <div class="blog-container">
+                <div class="blog-card">
+                    <a href="#">Siber Tehditlere Karşı 5 Yeni Yöntem</a>
+                </div>
+                <div class="blog-card">
+                    <a href="#">2024'ün En Popüler VPN Hizmetleri</a>
+                </div>
+                <div class="blog-card">
+                    <a href="#">Phishing Saldırılarında Yeni Taktikler</a>
+                </div>
             </div>
-            <div class="blog-card">
-                <a href="#">2024'ün En Popüler VPN Hizmetleri</a>
-            </div>
-            <div class="blog-card">
-                <a href="#">Phishing Saldırılarında Yeni Taktikler</a>
-            </div>
-        </div>
-    </section>
+        </section>
+    </div>
 </main>
 
 <footer class="footer">
