--- a/index.html
+++ b/index.html
@@ -32,18 +32,21 @@
         <h2 class="featured-title">Öne Çıkan Konular</h2>
         <div class="card-container">
             <div class="card">
-                <h3>Phishing Saldırıları</h3>
-                <p>Kimlik avı saldırılarından korunmanın yollarını öğrenin.</p>
+                <img src="sosyal.png" alt="Sosyal Mühendislik" class="card-image">
+                <h3>Sosyal Mühendislik Saldırıları</h3>
+                <p>Sosyal mühendislik saldırılarına karşı nasıl önlem alınır?</p>
                 <a href="#" class="btn">Devamını Oku</a>
             </div>
             <div class="card">
+                <img src="vpn.png" alt="VPN Kullanımı" class="card-image">
                 <h3>VPN Kullanımı</h3>
                 <p>VPN neden gerekli ve nasıl kurulur? Bilmeniz gerekenler.</p>
                 <a href="#" class="btn">Devamını Oku</a>
             </div>
             <div class="card">
-                <h3>Sosyal Mühendislik Saldırıları</h3>
-                <p>Sosyal mühendislik saldırılarına karşı nasıl önlem alınır?</p>
+                <img src="phishing.png" alt="Phishing Saldırıları" class="card-image">
+                <h3>Phishing Saldırıları</h3>
+                <p>Kimlik avı saldırılarından korunmanın yollarını öğrenin.</p>
                 <a href="#" class="btn">Devamını Oku</a>
             </div>
         </div>
