--- a/iletisim.html
+++ b/iletisim.html
@@ -1,12 +1,5 @@
 <!DOCTYPE html>
 <html lang="tr">
-İşte iletişim sayfası için oluşturulmuş HTML şablonu:
-
-### İletişim Sayfası (`iletisim.html`)
-
-```html
-<!DOCTYPE html>
-<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>İletişim</h1>
+        <h1>Güvenlik Bilgileri</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Anasayfa</a></li>
