--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     <h1>Atakan Ayaz | Siber Güvenlik Blogu</h1>
     <nav>
         <ul>
-            <li><a href="#home">Ana Sayfa</a></li>
-            <li><a href="#cve">CVE Açıkları</a></li>
-            <li><a href="#articles">Yazılar</a></li>
-            <li><a href="#contact">İletişim</a></li>
+                <li><a href="index.html">Anasayfa</a></li>
+                <li><a href="cve.html">CVE Açıkları</a></li>
+                <li><a href="blog.html">Blog Yazıları</a></li>
+                <li><a href="sosyal.html">Sosyal Mühendislik</a></li>
+                <li><a href="phishing.html">Phishing</a></li>
+                <li><a href="vpn.html">VPN Kullanımı</a></li>
         </ul>
     </nav>
 </header>
