--- a/vpn.html
+++ b/vpn.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>VPN Kullanımı</h1>
+        <h1>2024'ün En Popüler VPN Hizmetleri</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Anasayfa</a></li>
@@ -23,7 +23,29 @@
     <main>
         <section>
             <h2>VPN Nedir?</h2>
-            <p>VPN (Sanal Özel Ağ), internet trafiğinizi şifreleyerek güvenliğinizi artırır ve çevrimiçi gizliliğinizi korur.</p>
+            <p>Siber güvenlik ve gizlilik için VPN (Virtual Private Network) kullanımı her zamankinden daha önemli hale geldi. 2024 yılında öne çıkan en popüler VPN hizmetlerini ve neden tercih edildiğini inceleyelim.
+
+<h2>Popüler VPN Hizmetleri:</h>
+
+<h3>NordVPN:</h3>
+Hız ve güvenlik konusunda en iyi performansı sunan VPN’lerden biridir. 5400’den fazla sunucusu ile dünya genelinde kullanıcıların güvenliğini sağlar. Ayrıca, çift VPN özelliği ile ekstra koruma sunar.
+
+<h3>ExpressVPN:</h3>
+Yüksek hız ve kullanıcı dostu arayüzü ile dikkat çeker. 94 ülkede sunucuları bulunmaktadır. Streaming hizmetleri için ideal bir seçenek olup, çevrimiçi gizliliği artırır.
+
+<h3>CyberGhost:</h3>
+Kullanıcı dostu arayüzü ve geniş sunucu ağı ile popülerdir. Özellikle torrent kullanıcıları için uygun bir seçenek sunar.
+
+<h2>Neden VPN Kullanmalısınız?</h2>
+
+<h3>Gizlilik:</h3>
+IP adresiniz gizlenir ve internet üzerinde anonim kalmanıza yardımcı olur.
+
+<h3>Güvenlik:</h3>
+Wi-Fi ağlarında veri şifreleme sağlar. Açık ağlarda yapılan bağlantılarda güvenliği artırır.
+
+<h3>Erişim:</h3>
+Coğrafi kısıtlamaları aşmanıza yardımcı olur. Yerel içeriklere erişim sağlar.</p>
         </section>
     </main>
     <footer>
