--- a/vpn.html
+++ b/vpn.html
@@ -3,53 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VPN Kullanımı</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Atakan Ayaz | Siber Güvenlik Blogu</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>2024'ün En Popüler VPN Hizmetleri</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Anasayfa</a></li>
-                <li><a href="cve.html">CVE Açıkları</a></li>
-                <li><a href="blog.html">Blog Yazıları</a></li>
-                <li><a href="sosyal.html">Sosyal Mühendislik</a></li>
-                <li><a href="phishing.html">Phishing</a></li>
-                <li><a href="iletisim.html">İletişim</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <h2>VPN Nedir?</h2>
-            <p>Siber güvenlik ve gizlilik için VPN (Virtual Private Network) kullanımı her zamankinden daha önemli hale geldi. 2024 yılında öne çıkan en popüler VPN hizmetlerini ve neden tercih edildiğini inceleyelim.
 
-<h2>Popüler VPN Hizmetleri:</h>
+<header class="main-header">
+    <h1>Atakan Ayaz | Siber Güvenlik Blogu</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Ana Sayfa</a></li>
+            <li><a href="cve.html">CVE Açıkları</a></li>
+            <li><a href="blog.html">Yazılar</a></li>
+            <li><a href="iletisim.html">İletişim</a></li>
+        </ul>
+    </nav>
+</header>
 
-<h3>NordVPN:</h3>
-Hız ve güvenlik konusunda en iyi performansı sunan VPN’lerden biridir. 5400’den fazla sunucusu ile dünya genelinde kullanıcıların güvenliğini sağlar. Ayrıca, çift VPN özelliği ile ekstra koruma sunar.
+<main>
+    <section class="info-section">
+        <h2>Yakında Yayında...</h2>
 
-<h3>ExpressVPN:</h3>
-Yüksek hız ve kullanıcı dostu arayüzü ile dikkat çeker. 94 ülkede sunucuları bulunmaktadır. Streaming hizmetleri için ideal bir seçenek olup, çevrimiçi gizliliği artırır.
-
-<h3>CyberGhost:</h3>
-Kullanıcı dostu arayüzü ve geniş sunucu ağı ile popülerdir. Özellikle torrent kullanıcıları için uygun bir seçenek sunar.
-
-<h2>Neden VPN Kullanmalısınız?</h2>
-
-<h3>Gizlilik:</h3>
-IP adresiniz gizlenir ve internet üzerinde anonim kalmanıza yardımcı olur.
-
-<h3>Güvenlik:</h3>
-Wi-Fi ağlarında veri şifreleme sağlar. Açık ağlarda yapılan bağlantılarda güvenliği artırır.
-
-<h3>Erişim:</h3>
-Coğrafi kısıtlamaları aşmanıza yardımcı olur. Yerel içeriklere erişim sağlar.</p>
+    <div class="two-column-layout">
+        <section class="cve-section">
+            <h2 class="cve-title">Öne Çıkan CVE Açıkları</h2>
+            <div class="cve-container">
+                <div class="cve-card">
+                    <strong>CVE-2024-24029:</strong> Kritik bir uzaktan kod yürütme açığı. 
+                    <a href="cve24029.html">Detaylar</a>
+                </div>
+                <div class="cve-card">
+                    <strong>CVE-2024-4567:</strong> Kritik bir güvenlik açığı.
+                    <a href="#">Detaylar</a>
+                </div>
+                <div class="cve-card">
+                    <strong>CVE-2024-6789:</strong> Yetkisiz erişim sorunu.
+                    <a href="#">Detaylar</a>
+                </div>
+                <div class="cve-card">
+                    <strong>CVE-2024-7890:</strong> DDOS saldırısına açık yapı.
+                    <a href="#">Detaylar</a>
+                </div>
+            </div>
         </section>
-    </main>
-    <footer>
-        <p>&copy; 2024. Tüm hakları saklıdır.</p>
-    </footer>
+
+        <section class="articles-section">
+            <h2 class="articles-title">Son Blog Yazıları</h2>
+            <div class="blog-container">
+                <div class="blog-card">
+                    <a href="#">Siber Tehditlere Karşı 5 Yeni Yöntem</a>
+                </div>
+                <div class="blog-card">
+                    <a href="#">2024'ün En Popüler VPN Hizmetleri</a>
+                </div>
+                <div class="blog-card">
+                    <a href="#">Phishing Saldırılarında Yeni Taktikler</a>
+                </div>
+            </div>
+        </section>
+    </div>
+
+</main>
+
+<footer class="footer">
+    <p>&copy; 2024 Atakan Ayaz | Tüm Hakları Saklıdır</p>
+</footer>
+
 </body>
 </html>
